tests/ui/parser/issue-61858.rs
fn main() {
    (if foobar) //~ ERROR expected `{`, found `)`
}
